tests/type-error/lets/Cyclic2.vix
g : Unit -> int
g _ = f

f : int
f = g MkUnit

main = printInt f
